--- a/orders/templates/orders/elder_start.html
+++ b/orders/templates/orders/elder_start.html
@@ -11,14 +11,14 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #D3C4FF;
+            background-color: #f9f9f9;
             margin: 0;
         }
 
         .container {
             text-align: center;
             padding: 20px;
-            background-color: #E6E6FA;
+            background-color:#fffebd;
             /* Lavender */
             border-radius: 15px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -40,7 +40,7 @@
             height: 20px;
             width: 20px;
             margin: 0 5px;
-            background-color: #99FF99;
+            background-color:#007bff;
             border-radius: 50%;
             display: inline-block;
             animation: bounce 1.5s infinite;
