feat: elder_menu의 장바구니 전체삭제 기능 구현
기존의 결제하기 버튼만 있던 장바구니가 메뉴가 여러개 있을 때도 하나씩
삭제해야 하는 불편함이 있어서 장바구니를 reset할 수 있는 전체삭제 기능을
추가

--- a/orders/templates/orders/elder_menu.html
+++ b/orders/templates/orders/elder_menu.html
@@ -224,6 +224,13 @@
             font-size: xxx-large;
             margin-top: 10px;
         }
+
+        .clearCartBtn {
+            background-color: #dc3545;
+            height: 120px;
+            width: 221px;
+            font-size: larger;
+        }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
@@ -256,6 +263,7 @@
 
         <div class="submit-container">
             <div id="totalPrice" class="total-price">총 가격: 0원</div>
+            <button id="clearCartBtn" class="clearCartBtn">전체삭제</button>
             <button id="submitOrderBtn" class="submitOrderBtn">결제하기</button>
         </div>
 
@@ -388,6 +396,12 @@
 
         updateCartDisplay();
     }
+
+    document.getElementById('clearCartBtn').addEventListener('click', function() {
+        cart = {}; // Clear the cart
+        updateCartDisplay(); // Update the UI to reflect the cleared cart
+});
+
 
 // Handle visibility of the arrow buttons
 
