feat: elder_template의 버튼 기능들 구현
기본적으로 elder_templates는 음성인식으로 진행되지만, 음성인식을
놓치거나 비고령자 주문방식을 사용하고 싶은 경우를 위해 버튼들을 추가함

elder_start.html: "일반주문 하기"버튼, "음성입력 다시 시작"버튼에는
js코드를 추가로 작성

elder_menu.html - "일반주문 하기"버튼

--- a/orders/templates/orders/elder_menu.html
+++ b/orders/templates/orders/elder_menu.html
@@ -231,6 +231,20 @@
             width: 221px;
             font-size: larger;
         }
+
+        .mybtn {
+            width: 80%;
+            display: flex;
+            flex-direction: row-reverse;
+        }
+
+        .redirectButton {
+            margin-bottom: 30px;
+            width: 180px;
+            height: 60px;
+            background-color: #bab6b6;
+            color: #FFF;
+        }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
@@ -239,6 +253,9 @@
 
 
 <body>
+    <div class="mybtn">
+        <button id="redirectButton" class="redirectButton">일반주문 하기</button>
+    </div>
     <div class="container">
         <h1>이런 음료도 추천드려요.</h1>
 
@@ -549,6 +566,11 @@ document.getElementById('submitOrderBtn').addEventListener('click', function () 
     });
 });
 
+const redirectButton = document.getElementById('redirectButton');
+    redirectButton.addEventListener('click', function() {
+        // 버튼 클릭 시 orders/templates/menu.html로 리다이렉트
+        window.location.href = '/orders/menu/';
+})
 </script>
 </body>
 
