--- a/orders/templates/orders/elder_start.html
+++ b/orders/templates/orders/elder_start.html
@@ -77,6 +77,7 @@
         .startButton {
             margin-top: 10px;
             margin-bottom: 0px;
+            margin-right: 10px;
             width: 200px;
             height: 70px;
             font-size: larger;
@@ -88,42 +89,76 @@
         .hidden {
             display: none;
         }
+
+        .redirectButton {
+            margin-top: 10px;
+            margin-bottom: 0px;
+            width: 200px;
+            height: 70px;
+            font-size: larger;
+            background-color: #007bff;
+            color: white;
+            font-weight: bold;
+            border-radius: 15px;
+        }
+        .mybtn {
+            width: 840px;
+            display: flex;
+            flex-direction: row-reverse;
+        }
+
+        .redirectButton {
+            margin-bottom: 30px;
+            width: 180px;
+            height: 60px;
+            background-color: #bab6b6;
+            color: #FFF;
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>안녕하세요</h1>
-        <h1>어떤 메뉴로 주문하시겠습니까?</h1>
-        <div class="processing">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
+    <div class="container-wrapper">
+        <div class="mybtn">
+            <button id="redirectButton" class="redirectButton">일반주문 하기</button>
         </div>
-        <div>
-            <form id="speechForm">
-                {% csrf_token %}
-            </form>
-            <p id="transcription"></p>
+        <div class="container">
+            <h1>안녕하세요</h1>
+            <h1>어떤 메뉴로 주문하시겠습니까?</h1>
+            <div class="processing">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+            <div>
+                <form id="speechForm">
+                    {% csrf_token %}
+                </form>
+                <p id="transcription"></p>
+            </div>
+            <p>음성 인식 중 ....</p>
+            <button id="startButton" class="startButton hidden"></button>
         </div>
-        <p>음성 인식 중 ....</p>
-        <button id="startButton" class="startButton hidden"></button>
     </div>
-
+    
+    
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
+    
     <script>
         window.addEventListener('load', function () {
             console.log(">>>>>>>>>>>>> 실행");
             const welcomeMessage = "반갑습니다. 원하시는 메뉴를 추천해 드리겠습니다. 필요한 것이 있다면 말씀해주세요.";
             requestPermissions().then(() => {
-                speak(welcomeMessage, startSpeechRecognition);
+                // speak(welcomeMessage, startSpeechRecognition);
             }).catch(error => {
                 console.error('권한 요청 실패:', error);
             });
         });
 
         const startButton = document.getElementById('startButton');
+        const redirectButton = document.getElementById('redirectButton');
         const transcription = document.getElementById('transcription');
+
+
 
         function getCsrfToken() {
             const csrfTokenElement = document.querySelector('input[name="csrfmiddlewaretoken"]');
@@ -208,9 +243,17 @@
             }
         }
 
-        // window.onload = function () {
-        //     speak("안녕하세요, 어떤 메뉴를 주문하시겠습니까?", startSpeechRecognition);
-        // };
+        startButton.addEventListener('click', function() {
+        // speak 함수 실행 (특정 메시지를 발음하도록 수정 가능)
+        speak("새로운 음성 입력을 받을 수 있습니다. 어떤 메뉴를 원하세요?", startSpeechRecognition);
+        });
+        
+        redirectButton.addEventListener('click', function() {
+        // 버튼 클릭 시 orders/templates/menu.html로 리다이렉트
+        window.location.href = '/orders/menu/';
+
+});
+
     </script>
 </body>
 </html>
