--- a/orders/templates/orders/elder_start.html
+++ b/orders/templates/orders/elder_start.html
@@ -148,7 +148,7 @@
             console.log(">>>>>>>>>>>>> 실행");
             const welcomeMessage = "반갑습니다. 원하시는 메뉴를 추천해 드리겠습니다. 필요한 것이 있다면 말씀해주세요.";
             requestPermissions().then(() => {
-                // speak(welcomeMessage, startSpeechRecognition);
+                speak(welcomeMessage, startSpeechRecognition);
             }).catch(error => {
                 console.error('권한 요청 실패:', error);
             });
@@ -160,30 +160,24 @@
 
 
 
-        function getCsrfToken() {
-            const csrfTokenElement = document.querySelector('input[name="csrfmiddlewaretoken"]');
-            return csrfTokenElement ? csrfTokenElement.value : null;
-        }
-
+        
         function requestPermissions() {
             return new Promise((resolve, reject) => {
                 navigator.mediaDevices.getUserMedia({ audio: true, video: false })
-                    .then(stream => {
-                        console.log('마이크 사용 권한이 허용되었습니다.');
-                        resolve();
-                    })
-                    .catch(error => {
-                        console.error('마이크 사용 권한을 얻지 못했습니다:', error);
-                        reject(error);
-                    });
+                .then(stream => {
+                    console.log('마이크 사용 권한이 허용되었습니다.');
+                    resolve();
+                })
+                .catch(error => {
+                    console.error('마이크 사용 권한을 얻지 못했습니다:', error);
+                    reject(error);
+                });
             });
         }
-
+        
         function speak(text, callback) {
-            console.log(">>>>>>>>> speak 실행");
             const synth = window.speechSynthesis;
             const utterance = new SpeechSynthesisUtterance(text);
-            console.log(">>>>>>>>>> utterance", utterance);
             utterance.lang = 'ko-KR';
             utterance.onend = function () {
                 if (callback) {
@@ -191,7 +185,11 @@
                 }
             };
             synth.speak(utterance);
-            console.log(">>>>>>>> speak 끝 <<<<<<<<<<<");
+        }
+        
+        function getCsrfToken() {
+            const csrfTokenElement = document.querySelector('input[name="csrfmiddlewaretoken"]');
+            return csrfTokenElement ? csrfTokenElement.value : null;
         }
 
         function startSpeechRecognition() {
@@ -233,7 +231,6 @@
                             console.error('에러:', error);
                         });
                 };
-                console.log("recognition직전>>>>>>>>>>>>>");
                 recognition.onend = function () {
                     startButton.textContent = '음성 입력 다시 시작';
                     startButton.classList.remove('hidden');
@@ -243,15 +240,14 @@
             }
         }
 
+        
         startButton.addEventListener('click', function() {
         // speak 함수 실행 (특정 메시지를 발음하도록 수정 가능)
         speak("새로운 음성 입력을 받을 수 있습니다. 어떤 메뉴를 원하세요?", startSpeechRecognition);
         });
-        
         redirectButton.addEventListener('click', function() {
         // 버튼 클릭 시 orders/templates/menu.html로 리다이렉트
         window.location.href = '/orders/menu/';
-
 });
 
     </script>
